# CPP_MoveSemantic

./: CMakeLists.txt  README.md
ExerciseFiles/: README.md  rational1.cpp  rational2.cpp  rational3.cpp  rationalClass1.cpp  rationalClass1.hpp  rationalClass2.cpp  rationalClass2.hpp  rationalClass3.cpp  rationalClass3.hpp  test.cpp  test2.cpp
